--- a/more.html
+++ b/more.html
@@ -63,7 +63,7 @@
         <div class="more__friend friend">
           <div class="friend__column">
             <img
-              src="src/img/avatar2.png"
+              src="src/img/페퍼보이2.JPG"
               alt=""
               class="globar-avatar friend__avatar"
             />
@@ -71,96 +71,102 @@
               <span class="friend__name">
                 서민준
               </span>
+              <span class="friend__status more--email">
+                salswnss@gmaill.com
+              </span>
             </div>
-            <span class="friend__status">
-              salswnss@gmaill.com
-            </span>
           </div>
           <div class="friend__column">
-            <span class="friend__MY">MY</span>
+            <span class="more__MY">MY</span>
           </div>
         </div>
-        <!-- 카카오페이 -->
-        <div class="more__kakaopay kakaopay">
-          <div class="kakaopay__column">
-            <span class="kakaopay__comment">
-              <i class="fas fa-comment-dollar"></i>
-            </span>
-          </div>
-          <div class="kakaopay__column">
-            <span class="kakaopay__btn">송금</span>
-            <span class="kakaopay__btn">결제</span>
-            <span class="kakaopay__btn">자산</span>
-          </div>
-        </div>
-        <!-- 더보기 버튼 -->
-        <ul class="more__btn-list">
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="far fa-smile fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              이모티콘
-            </span>
-          </li>
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="fas fa-gift fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              선물하기
-            </span>
-          </li>
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="fas fa-store fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              쇼핑하기
-            </span>
-          </li>
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="fab fa-monero fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              메이커스
-            </span>
-          </li>
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="far fa-beer fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              프렌즈샵
-            </span>
-          </li>
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="fas fa-tshirt fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              스타일
-            </span>
-          </li>
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="fas fa-utensils fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              주문하기
-            </span>
-          </li>
-          <li class="more__btn">
-            <span class="more__btn-icon">
-              <i class="fas fa-music fa-2x"></i>
-            </span>
-            <span class="more__btn-title">
-              멜론티켓
-            </span>
-          </li>
-        </ul>
       </header>
+      <!-- 카카오페이 -->
+      <section class="more__kakaopay kakaopay">
+        <div class="kakaopay__column">
+          <div class="kakaopay__comment">
+            <i class="fas fa-comment-dollar"></i>
+            <span class="kakaopay__money"> 8,731,700원</span>
+          </div>
+        </div>
+        <div class="kakaopay__column">
+          <span class="kakaopay__btn kakaopay__btn--left">송금</span>
+          <span class="kakaopay__btn">결제</span>
+          <span class="kakaopay__btn">자산</span>
+        </div>
+      </section>
+      <!-- 더보기 버튼 -->
+      <ul class="more__btn-list">
+        <li class="more__btn">
+          <span class="more__btn-icon">
+            <i class="far fa-smile"></i>
+          </span>
+          <span class="more__btn-title">
+            이모티콘
+          </span>
+        </li>
+        <li class="more__btn">
+          <span class="globar__badge-dot"></span>
+          <span class="more__btn-icon">
+            <i class="fas fa-gift"></i>
+          </span>
+          <span class="more__btn-title">
+            선물하기
+          </span>
+        </li>
+        <li class="more__btn">
+          <span class="more__btn-icon">
+            <i class="fas fa-store"></i>
+          </span>
+          <span class="more__btn-title">
+            쇼핑하기
+          </span>
+        </li>
+        <li class="more__btn">
+          <span class="more__btn-icon">
+            <i class="fab fa-monero"></i>
+          </span>
+          <span class="globar__badge-dot"></span>
+          <span class="more__btn-title">
+            메이커스
+          </span>
+        </li>
+      </ul>
+      <ul class="more__btn-list">
+        <li class="more__btn">
+          <span class="more__btn-icon friends-shop">
+            <i class="fas fa-beer"></i>
+          </span>
+          <span class="more__btn-title">
+            프렌즈샵
+          </span>
+        </li>
+        <li class="more__btn">
+          <span class="more__btn-icon">
+            <i class="fas fa-tshirt"></i>
+          </span>
+          <span class="globar__badge-dot"></span>
+          <span class="more__btn-title">
+            스타일
+          </span>
+        </li>
+        <li class="more__btn">
+          <span class="more__btn-icon">
+            <i class="fas fa-utensils"></i>
+          </span>
+          <span class="more__btn-title">
+            주문하기
+          </span>
+        </li>
+        <li class="more__btn">
+          <span class="more__btn-icon melon-ticket">
+            <i class="fas fa-music"></i>
+          </span>
+          <span class="more__btn-title">
+            멜론티켓
+          </span>
+        </li>
+      </ul>
     </main>
 
     <nav class="nav">
@@ -172,16 +178,18 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">62</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
         <li class="nav__list-item">
           <a href="" class="nav__list-link">
-            #
+            <i class="fas fa-hashtag"></i>
           </a>
         </li>
         <li class="nav__list-item">
           <a href="more.html" class="nav__list-link">
+            <div class="globar__badge-dot"></div>
             <i class="fas fa-ellipsis-h"></i>
           </a>
         </li>
