--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/cd5e56d4b7.js"
       crossorigin="anonymous"
     ></script>
-    <title>찾기 | ppby</title>
+    <title>친구 | ppby</title>
   </head>
   <body>
     <!-- 상태 바 -->
