--- a/settings.html
+++ b/settings.html
@@ -216,5 +216,9 @@
         </li>
       </ul>
     </nav>
+
+    <div class="big-screen">
+      <div class="big-screen__text">화면을 줄여주세요👍🏻
+    </div>
   </body>
 </html>
