--- a/chat.html
+++ b/chat.html
@@ -12,46 +12,49 @@
     <title>유니👰🏻 | ppby</title>
   </head>
   <body class="chat-body">
-    <!-- 상태 바 -->
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <i class="fas fa-signal"></i>
-        <span class="status-bar__agency">KT </span>
-        <span class="status-bar__wifi">
-          <i class="fas fa-wifi"></i>
-        </span>
+    <!-- 이런 식으로 position: fixed를 할 것을 묶어서 사용할 수 있음 -->
+    <div class="header-wrapper">
+      <!-- 상태 바 -->
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <i class="fas fa-signal"></i>
+          <span class="status-bar__agency">KT </span>
+          <span class="status-bar__wifi">
+            <i class="fas fa-wifi"></i>
+          </span>
+        </div>
+        <div class="status-bar__column">
+          <span class="status-bar__clock">오전 10:14</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="far fa-compass"></i>
+          <i class="far fa-clock"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
-      <div class="status-bar__column">
-        <span class="status-bar__clock">오전 10:14</span>
-      </div>
-      <div class="status-bar__column">
-        <i class="far fa-compass"></i>
-        <i class="far fa-clock"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
-      </div>
+      <!-- 채팅 헤더 -->
+      <header class="header">
+        <div class="header__header-column">
+          <a href="index.html" class="header__back-btn">
+            <i class="fas fa-angle-left"></i>
+          </a>
+          <span class="header__number">62</span>
+        </div>
+        <div class="header__header-column">
+          <h1 class="header__title">유니👰🏻</h1>
+        </div>
+        <div class="header__header-column">
+          <span class="header__icon">
+            <i class="fas fa-search"></i>
+          </span>
+          <span class="header__icon">
+            <i class="fas fa-bars"></i>
+          </span>
+        </div>
+      </header>
     </div>
 
-    <!-- 채팅 헤더 -->
-    <header class="header">
-      <div class="header__header-column">
-        <a href="index.html" class="header__back-btn">
-          <i class="fas fa-angle-left"></i>
-        </a>
-        <span class="header__number">62</span>
-      </div>
-      <div class="header__header-column">
-        <h1 class="header__title">유니👰🏻</h1>
-      </div>
-      <div class="header__header-column">
-        <span class="header__icon">
-          <i class="fas fa-search"></i>
-        </span>
-        <span class="header__icon">
-          <i class="fas fa-bars"></i>
-        </span>
-      </div>
-    </header>
     <!-- 채팅 메인 -->
     <main class="chat-screen">
       <ul class="chat__messages">
@@ -131,19 +134,16 @@
       </ul>
     </main>
 
-    <div class="chat__write">
-      <div class="chat__write-column">
+    <div class="chat__write-container">
+      <input
+        type="text"
+        placeholder="메세지를 입력하세요."
+        class="chat__write"
+      />
+      <div class="chat__icon-left chat__icon">
         <i class="far fa-plus-square"></i>
       </div>
-      <div class="chat__write-column">
-        <!-- input으로 공간 절약 -->
-        <input
-          type="text"
-          placeholder="메세지를 입력하세요."
-          class="chat__write-input"
-        />
-      </div>
-      <div class="chat__write-column">
+      <div class="chat__icon-right chat__icon">
         <span class="chat__write-icon">
           <i class="far fa-smile-wink"></i>
         </span>
@@ -151,6 +151,10 @@
           <i class="fas fa-hashtag"></i>
         </span>
       </div>
+    </div>
+    
+    <div class="big-screen">
+      <div class="big-screen__text">화면을 줄여주세요👍🏻
     </div>
   </body>
 </html>
