--- a/friends.html
+++ b/friends.html
@@ -41,8 +41,8 @@
           <i class="fas fa-search"></i>
         </span>
         <a href="#find">
-          <span class="header__icon">
-            <i class="fas fa-user-plus"></i>
+          <span class="header__icon icon--user-plus">
+              <i class="fas fa-user-plus"></i>
           </span>
         </a>
         <span class="header__icon">
@@ -289,8 +289,12 @@
         </li>
       </ul>
     </nav>
+
+    <div class="big-screen">
+      <div class="big-screen__text">화면을 줄여주세요👍🏻
+    </div>
     <!-- 찾기 모달 -->
-    <div id="find">
+    <!-- <div id="find">
       <div class="find__modal-wrapper modal">
         <div class="modal__content">
           <div class="modal__header">
@@ -319,6 +323,6 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
